--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # Node modules
+.next/
+out/
+build/
+*.log
 node_modules/
 
 # Build output
@@ -27,4 +31,4 @@ yarn-error.log*
 
 # OS generated files
 .DS_Store
-Thumbs.db
+# Thumbs.db
