--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "portfolio-full",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "framer-motion": "^6.0.0",
+    "@carlosjunod/react-full-page-scroller": "^1.0.2",
+    "framer-motion": "^6.5.1",
+    "next": "^14.2.30",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "three": "^0.153.0"
-  },
-  "devDependencies": {
-    "vite": "^4.0.0",
-    "@vitejs/plugin-react": "^3.0.0"
   }
 }
