feat: Add contact form component with validation and email sending functionality
style: Create styles for the contact form and error messages

feat: Implement experience carousel with card components for work experience display

refactor: Replace CardFlipDeck with ExperienceCarousel in the main page

feat: Enhance hero section with rotating roles animation

fix: Adjust particle background for improved visibility and interaction

chore: Remove unused CardFlipDeck styles and update global styles for responsiveness

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@carlosjunod/react-full-page-scroller": "^1.0.2",
+    "@carlosjunod/react-full-page-scroller": "^1.1.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^6.5.1",
     "next": "^14.2.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "three": "^0.153.0"
   }
 }
